--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "playwright-stealth>=1.0.6",
     "pytest>=8.3.3",
     "setuptools>=75.6.0",
+    "html2text>=2024.2.26",
+    "scrapy>=2.12.0",
 ]
 
 [dependency-groups]
